<resources>
    <string name="app_name">Grow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_home_run">Home Run</string>
    <string name="menu_home_end">Home End</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="tv_spinnerStringArray">Choose:</string>

    <string name="bt_running">STOP</string>
    <string name="bt_stopped">RUN</string>

    <string name="spinner_count_up">Count Up</string>
    <string name="spinner_count_down">Count Down</string>

    <string-array name="spinner_stringArray">
        <item>@string/spinner_count_down</item>
<!--        <item>@string/spinner_count_up</item>-->
    </string-array>
</resources>
