<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vini.grow.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_home_run"
            app:destination="@id/nav_home_run" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_run"
        android:name="com.vini.grow.ui.home.HomeRunFragment"
        android:label="@string/menu_home_run"
        tools:layout="@layout/fragment_home_run" >
        <action
            android:id="@+id/action_nav_home_run_to_nav_home_end"
            app:destination="@+id/nav_home_end" />
        <action
            android:id="@+id/action_nav_home_run_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_end"
        android:name="com.vini.grow.ui.home.HomeEndFragment"
        android:label="@string/menu_home_end"
        tools:layout="@layout/fragment_home_end" >
    </fragment>

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.vini.grow.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.vini.grow.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.vini.grow.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>